--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -8,12 +8,15 @@ environment:
 
 dependencies:
   bloc: ^8.1.4
+  coffee_repository:
+    path: packages/coffee_repository
   equatable: ^2.0.5
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
   flutter_localizations:
     sdk: flutter
+  get_it: ^8.0.0
   intl: ^0.19.0
   meta: ^1.15.0
 
