--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dev_dependencies:
   bloc_test: ^9.1.7
   flutter_test:
     sdk: flutter
+  melos: ^6.2.0
   mocktail: ^1.0.4
   very_good_analysis: ^6.0.0
 
